--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>React App</title>
+    <title>Landmarks</title>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_API_KEY%" async defer></script>
   </head>
   <body>
